@@ -75,6 +75,7 @@ if (!defined('MEDIAWIKI')) {
 		$this->addFields('u1.user_name');
 		$this->addWhereFld('u1.user_name', $goodNames);
 		$this->addFieldsIf('u1.user_editcount', isset($this->prop['editcount']));
+		$this->addFieldsIf('u1.user_registration', isset($this->prop['registration']));
 
 		$join = false;
 		$tables = array('user');
@@ -114,6 +115,8 @@ if (!defined('MEDIAWIKI')) {
 			$data[$r->user_name]['name'] = $r->user_name;
 			if(isset($this->prop['editcount']))
 				$data[$r->user_name]['editcount'] = $r->user_editcount;
+			if(isset($this->prop['registration']))
+				$data[$r->user_name]['registration'] = wfTimestamp(TS_ISO_8601, $r->user_registration);
 			if(isset($this->prop['groups']))
 				// This row contains only one group, others will be added from other rows
 				if(!is_null($r->ug_group))
@@ -146,7 +149,8 @@ if (!defined('MEDIAWIKI')) {
 				ApiBase :: PARAM_TYPE => array (
 					'blockinfo',
 					'groups',
-					'editcount'
+					'editcount',
+					'registration'
 				)
 			),
 			'users' => array(
